--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,23 @@
 <head>
   <title>Todo List</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
-<body>
-  <div id="render-target"></div>
+<body class="layout layout-column">
+  <!-- Page Layout here -->
+  <div class="layout layout-row layout-fill">
+
+      <div class="flex-25">
+        <nav class="navbar navbar-light bg-faded">
+          <a class="navbar-brand" href="#">Projects</a>
+        </nav>
+        <div id="nav-menu-target"></div>
+      </div>
+
+      <div class="flex">
+        <div id="render-target"></div>
+      </div>
+
+  </div>
 </body>
