--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,11 @@
 
       <div class="flex-25">
         <nav class="navbar navbar-light bg-faded">
-          <a class="navbar-brand" href="#">Projects</a>
+          <a class="navbar-brand" href="/projects">Projects</a>
         </nav>
-        <div id="nav-menu-target"></div>
+        <div class="container-fluid">
+          <div id="nav-menu-target"></div>
+        </div>
       </div>
 
       <div class="flex">
