--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <div class="flex">
-        <div id="render-target"></div>
+        <div class="flex" id="render-target"></div>
       </div>
 
   </div>
