--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <div class="layout layout-row layout-fill">
 
       <div class="flex-25">
-        <nav class="navbar navbar-light bg-faded">
+        <nav class="navbar">
           <a class="navbar-brand" href="/projects">Projects</a>
         </nav>
         <div class="container-fluid">
