--- a/client/index.html
+++ b/client/index.html
@@ -6,19 +6,29 @@
 
 <body class="layout layout-column">
   <!-- Page Layout here -->
+<div>
+  <nav class="navbar navbar-light bg-faded">
+    <ul class="nav navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/projects">Projects <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </nav>
+</div>
   <div class="layout layout-row layout-fill">
 
-      <div class="flex-25">
-        <nav class="navbar">
-          <a class="navbar-brand" href="/projects">Projects</a>
-        </nav>
-        <div class="container-fluid">
+      <div class="side-nav">
+        <div class="container-fluid p-y">
           <div id="nav-menu-target"></div>
         </div>
       </div>
 
+      <div class="flex-2"></div>
+
       <div class="flex">
+        <div class="container-fluid">
         <div class="flex" id="render-target"></div>
+        </div>
       </div>
 
   </div>
