--- a/client/index.html
+++ b/client/index.html
@@ -17,14 +17,14 @@
 </div>
   <div class="row">
 
-      <div class="side-nav">
+      <div class="side-nav col-md-3">
         <div class="container-fluid p-y">
           <div id="nav-menu-target"></div>
         </div>
       </div>
 
 
-      <div class="main-content col-md-10">
+      <div class="main-content col-md-9">
         <div class="container-fluid">
         <div class="flex" id="render-target"></div>
         </div>
