--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,6 @@
 
 <body class="container-fluid">
   <!-- Page Layout here -->
-<div >
   <nav class="navbar navbar-light bg-faded">
     <ul class="nav navbar-nav">
       <li class="nav-item active">
@@ -14,21 +13,25 @@
       </li>
     </ul>
   </nav>
-</div>
-  <div class="row">
 
-      <div class="side-nav col-md-3">
-        <div class="container-fluid p-y">
-          <div id="nav-menu-target"></div>
-        </div>
+  <div class="app-layout">
+    <div class="side-nav">
+      <div class="side-nav-menu p-a">
+        <div id="nav-menu-target"></div>
       </div>
 
-
-      <div class="main-content col-md-9">
-        <div class="container-fluid">
-        <div class="flex" id="render-target"></div>
-        </div>
+      <div class="side-nav-footer">
+        
       </div>
+    </div>
 
+
+    <div class="main-content">
+      <div class="container-fluid">
+      <div class="flex" id="render-target"></div>
+      </div>
+    </div>
   </div>
+
+
 </body>
