--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,9 @@
 
 </head>
 
-<body class="container-fluid">
+<body>
   <!-- Page Layout here -->
-  <nav class="navbar navbar-light bg-faded">
+  <!-- <nav class="navbar navbar-light bg-faded">
     <ul class="nav navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="/projects">Projects <span class="sr-only">(current)</span></a>
@@ -15,15 +15,8 @@
   </nav>
 
   <div class="app-layout">
-    <div class="side-nav">
-      <div class="side-nav-menu p-a">
-        <div id="nav-menu-target"></div>
-      </div>
 
-      <div class="side-nav-footer">
-        
-      </div>
-    </div>
+    <div id="side-nav-target"></div>
 
 
     <div class="main-content">
@@ -31,7 +24,7 @@
       <div class="flex" id="render-target"></div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 </body>
